Issue #1235. Bump z-index for label editor.

--- a/webcompat/static/css/development/components/label-editor.css
+++ b/webcompat/static/css/development/components/label-editor.css
@@ -9,7 +9,7 @@
   position: absolute;
   font-size: var(--LabelEditor-fontSize);
   display: none;
-  z-index: 2;
+  z-index: 5;
   white-space: nowrap;
   top: 100%;
   left: 0;
